--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     	            </div>
     	            <div class="content box8">
     	                <div class="field">
-    	                    <input id="search_field" class="text" type="text" placeholder="Введите поисковой запрос"/>
+    	                    <input id="search_field" class="text" type="text" placeholder="Введите поисковый запрос"/>
     	                    <input class="search_button" type="submit" value=""/>
     	                </div>
     	                <div class="clarify">
