--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         	                    Тут можно будет рассказать о трудностях с которыми вы столкнулись, <br/> чтобы обнажить существующие проблемы, <br/>а затем преодолеть их.
         	                </p>
         	            </div>
-        	            <a href="#" class="login">Вход</a>
+        	            <a href="#" class="login"><i>Вход</i></a>
         	            <div class="clear"></div>
         	        </div>
     	            
