--- a/index.html
+++ b/index.html
@@ -412,14 +412,15 @@
                         <div class="title">
                             <span>Популярные отзывы</span>
                             <select>
-                                <option>месяц</option>
-                                <option>день</option>
+                                <option>месяца</option>
+                                <option>недели</option>
+                                <option>года</option>
                             </select>
                         </div>
                         <ul>
                             <li>
                                 <div class="info">
-                                    <span class="like">245</span>
+                                    <span class="like">25</span>
                                     <span class="comment">0</span>
                                     <span class="name">alkole</span>
                                 </div>
@@ -435,7 +436,7 @@
                             </li>
                              <li>
                                 <div class="info">
-                                    <span class="like">245</span>
+                                    <span class="like">241</span>
                                     <span class="comment">0</span>
                                     <span class="name">alkole</span>
                                 </div>
@@ -443,7 +444,7 @@
                             </li>
                              <li>
                                 <div class="info">
-                                    <span class="like">245</span>
+                                    <span class="like">45</span>
                                     <span class="comment">0</span>
                                     <span class="name">alkole</span>
                                 </div>
